tests/paczka1/fuzzy1/48477418.err
Error in line 12: 6HWHhnkX S809 54,N
Error in line 21: S809 A41 71,9
Error in line 32: S809 S916 39,9
Error in line 29: 9IN S916 36,7
Error in line 33: S809 A41 19,5
Error in line 31: Wx0S A729 42,0
Error in line 35: S809 A729 55,9
Error in line 5: 6HWHhnkX S809 60,1
